# opengl-tutorials

./: .gitignore  CMakeLists.txt  COMPILE.md  LLM.md  compile.sh
YoutubeOpenGL 10 - Specular Maps/: Camera.cpp  Main.cpp
YoutubeOpenGL 11 - Types of Light/: Main.cpp
YoutubeOpenGL 12 - Mesh Class/: Main.cpp  Mesh.cpp  Mesh.h
YoutubeOpenGL 13 - Model Loading/: Camera.h  Main.cpp  Mesh.cpp
YoutubeOpenGL 14 - Depth Buffer/: Main.cpp  default.frag  default.vert
YoutubeOpenGL 15 - Stencil Buffer/: Mesh.h
YoutubeOpenGL 17 - Transparency & Blending/: Model.cpp
YoutubeOpenGL 2 - Triangle/: Main.cpp
YoutubeOpenGL 3 - Indices/: Main.cpp
YoutubeOpenGL 4 - Organizing/: Main.cpp
YoutubeOpenGL 5 - Shaders/: Main.cpp
YoutubeOpenGL 8 - Camera/: Camera.cpp  Camera.h  Main.cpp
YoutubeOpenGL 9 - Lighting/: Camera.cpp  Camera.h  Main.cpp
